--- a/components/contactForm/ContactForm.module.scss
+++ b/components/contactForm/ContactForm.module.scss
@@ -35,5 +35,10 @@
     color: #fff;
     background-color: $buttonColor;
     border: none;
+    border-radius: 5px;
+
+    &:hover {
+      background-color: $themeDotBorder;
+    }
   }
 }
